--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,7 +4,7 @@
 
 html {
   min-height: 100%;
-  background: url(/background.jpg);
+  background: url("/assets/images/background.jpg");
   background-size: cover;
   box-shadow: inset 0 0 0 2000px #33294190;
 }
