🪄 Add lint formatter and bugs fix.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,7 +1,7 @@
 @import "@flaticon/flaticon-uicons/css/all/all";
 
 * {
-  font-family: 'Kanit', sans-serif;
+  font-family: "Kanit", sans-serif;
 }
 
 html {
