--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -51,3 +51,14 @@ span {
   font-size: 13px;
   font-weight: 200;
 }
+
+.page-enter-active,
+.page-leave-active {
+  transition: all 0.4s;
+}
+
+.page-enter-from,
+.page-leave-to {
+  opacity: 0;
+  filter: blur(1rem);
+}
