--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,69 +1,52 @@
 @import "@flaticon/flaticon-uicons/css/all/all";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-* {
-  font-family: "Kanit", sans-serif;
-}
+@layer base {
+  html {
+    font-family: "Kanit", sans-serif;
+  }
 
-body {
-  width: 100%;
-  min-height: 100vh;
-  background: url("/assets/images/background.jpg");
-  background-size: cover;
-  box-shadow: inset 0 0 0 2000px #33294190;
-}
+  body {
+    @apply min-h-screen
+    w-full
+    bg-[url("/assets/images/background.webp")]
+    bg-cover
+    shadow-[inset_0_0_0_2000px_#33294190];
+  }
 
-h1 {
-  /* text-5xl */
-  font-size: 3rem; /* 48px */
-  line-height: 1;
-  font-weight: 900;
-}
+  h1 {
+    @apply text-3xl font-black md:text-5xl;
+  }
 
-h2 {
-  /* text-4xl */
-  font-size: 2.25rem; /* 36px */
-  line-height: 2.5rem; /* 40px */
-  font-weight: 800;
-}
+  h2 {
+    @apply text-2xl font-extrabold md:text-4xl;
+  }
 
-h3 {
-  /* text-3xl */
-  font-size: 1.875rem; /* 30px */
-  line-height: 2.25rem; /* 36px */
-  font-weight: 700;
-}
+  h3 {
+    @apply text-xl font-bold md:text-3xl;
+  }
 
-h4 {
-  /* text-2xl */
-  font-size: 1.5rem; /* 24px */
-  line-height: 2rem; /* 32px */
-  font-weight: 600;
-}
+  h4 {
+    @apply text-lg font-semibold md:text-2xl;
+  }
 
-h5 {
-  /* text-xl */
-  font-size: 1.25rem; /* 20px */
-  line-height: 1.75rem; /* 28px */
-  font-weight: 500;
-}
+  h5 {
+    @apply text-base font-medium md:text-xl;
+  }
 
-h6 {
-  /* text-lg */
-  font-size: 1.125rem; /* 18px */
-  line-height: 1.75rem; /* 28px */
-  font-weight: 400;
-}
+  h6 {
+    @apply text-sm font-normal md:text-lg;
+  }
 
-p {
-  /* text-base */
-  font-size: 1rem; /* 16px */
-  line-height: 1.5rem; /* 24px */
-}
+  p {
+    @apply text-base;
+  }
 
-span {
-  /* text-sm */
-  font-size: 0.875rem; /* 14px */
-  line-height: 1.25rem; /* 20px */
+  span {
+    @apply text-xs;
+  }
 }
 
 .page-enter-active,
