--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -10,34 +10,34 @@
 
   body {
     @apply min-h-screen
-    w-full
-    bg-[url("/assets/images/background.webp")]
-    bg-cover
-    shadow-[inset_0_0_0_2000px_#33294190];
+      w-full
+      bg-[url("/assets/images/background.webp")]
+      bg-cover
+      shadow-[inset_0_0_0_2000px_#33294190];
   }
 
   h1 {
-    @apply text-3xl font-black md:text-5xl;
+    @apply text-3xl font-black md:text-4xl;
   }
 
   h2 {
-    @apply text-2xl font-extrabold md:text-4xl;
+    @apply text-2xl font-extrabold md:text-3xl;
   }
 
   h3 {
-    @apply text-xl font-bold md:text-3xl;
+    @apply text-xl font-bold md:text-2xl;
   }
 
   h4 {
-    @apply text-lg font-semibold md:text-2xl;
+    @apply text-lg font-semibold md:text-xl;
   }
 
   h5 {
-    @apply text-base font-medium md:text-xl;
+    @apply text-base font-medium md:text-lg;
   }
 
   h6 {
-    @apply text-sm font-normal md:text-lg;
+    @apply text-sm font-normal md:text-base;
   }
 
   p {
@@ -45,7 +45,7 @@
   }
 
   span {
-    @apply text-xs;
+    @apply text-xs md:text-sm;
   }
 }
 
